vlib/v/checker/tests/struct_field_optional_init_err.out
vlib/v/checker/tests/struct_field_optional_init_err.vv:8:3: error: field `bar` is result, but initialization of result fields currently unsupported
    6 | fn main() {
    7 |     _ := Foo{
    8 |         bar: 1
      |         ~~~~~~
    9 |         baz: 1
   10 |     }
vlib/v/checker/tests/struct_field_optional_init_err.vv:9:3: error: field `baz` is optional, but initialization of optional fields currently unsupported
    7 |     _ := Foo{
    8 |         bar: 1
    9 |         baz: 1
      |         ~~~~~~
   10 |     }
   11 | }
