vlib/v/checker/tests/struct_field_optional_init_err.vv
struct Foo {
	bar !int
	baz ?int
}

fn main() {
	_ := Foo{
		bar: 1
		baz: 1
	}
}
